# utf.tech_test

./: README.md  db_data.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
utf_tech/api/v1/: apps.py  urls.py
utf_tech/foods/: apis.py  apps.py  selectors.py  serializers.py  urls.py
utf_tech/foods/fixtures/test_case_3/: expected_response.json
utf_tech/foods/fixtures/test_foodlist_api/test_case_1/: catalog_data.json  expected_response.json
utf_tech/foods/fixtures/test_foodlist_api/test_case_2/: catalog_data.json  expected_response.json
utf_tech/foods/fixtures/test_foodlist_api/test_case_3/: catalog_data.json
utf_tech/foods/fixtures/test_foodlist_api/test_case_4/: catalog_data.json
utf_tech/foods/fixtures/test_foodlist_api/test_case_5/: catalog_data.json  expected_response.json
utf_tech/foods/migrations/: 0001_initial.py
utf_tech/foods/tests/apis/: test_foodlist.py
